Bug fix: Missing resizer grippy image in Clippings Manager status bar
(part of issue #474)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -956,7 +956,7 @@ ul.fancytree-container {
     
     border-top: 1px solid var(--color-tb-border);
     background-color: var(--color-statusbar-bkgd);
-    background-image: url("chrome://global/skin/icons/resizer.png");
+    background-image: url("chrome://global/skin/icons/resizer.svg");
     background-position: right bottom;
     background-repeat: no-repeat;
 
